--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ PeopleAPI/storage.json
 CalenderAPI/token.pickle
 GmailAPI/token.pickle
 GmailAPI/ListMessagses.py
+DocsAPI/token.json
+DocsAPI/token.pickls
