--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,4 @@
 client_secret.json
-SheetsAPI
-DriveAPI/storage.json
-PeopleAPI/storage.json
-CalenderAPI/token.pickle
-GmailAPI/token.pickle
-GmailAPI/ListMessagses.py
-DocsAPI/token.json
-DocsAPI/token.pickls
+**/storage.json
+**/token.pickle
+**/token.json
